--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ welcome
 <script src="util/query.js"></script>
 <script>
 
-    MODULE.require(['Query'], function (query) {
+   require(['Query'], function (query) {
         query(function () {
             /*console.log(UTIL.browser());
              console.log(window.document.body);
